# rmail-parser

./: Cargo.toml  aliases.json
.github/workflows/: release.yml
src/: lib.rs  main.rs  mbox.rs  message.rs  output.rs  pipeline.rs  threading.rs
tests/: mbox_test.rs  message_test.rs  output_test.rs  threading_test.rs
tests/fixtures/: sample.mbox
