[package]
name = "rmail-parser"
version = "0.1.0"
edition = "2021"
description = "Parse Mailman pipermail mbox archives into structured JSON"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.10"
mailparse = "0.15"
flate2 = "1"
regex = "1"
anyhow = "1"
hex = "0.4"
encoding_rs = "0.8"
